--- a/README
+++ b/README
@@ -14,6 +14,10 @@ multiplayer.
 
 Tyrian 2.1 data files which have been released as freeware:
   http://camanis.net/tyrian/tyrian21.zip
+  
+== Original Xbox Port ==========================================================
+Setup and install nxdk. See https://github.com/XboxDev/nxdk. Then
+make -f Makefile.nxdk NXDK_DIR=/path/to/nxdk
 
 == Keyboard Controls ===========================================================
 
