README: Simplify for Xbox port

--- a/README
+++ b/README
@@ -18,31 +18,7 @@ Tyrian 2.1 data files which have been released as freeware:
 == Original Xbox Port ==========================================================
 Setup and install nxdk. See https://github.com/XboxDev/nxdk. Then
 make -f Makefile.nxdk NXDK_DIR=/path/to/nxdk
-
-== Keyboard Controls ===========================================================
-
-ctrl-backspace -- kill OpenTyrian
-alt-enter      -- fullscreen
-ctrl-f10       -- ungrab mouse
-
-arrow keys     -- ship movement
-space          -- fire weapons
-enter          -- toggle rear weapon mode
-ctrl/alt       -- fire left/right sidekick
-
-== Network Multiplayer =========================================================
-
-Currently OpenTyrian does not have an arena; as such, networked games must be
-initiated manually via the command line simultaniously by both players.
-
-syntax:
-  opentyrian --net HOSTNAME --net-player-name NAME --net-player-number NUMBER
-
-where HOSTNAME is the IP address of your opponent, NUMBER is either 1 or 2
-depending on which ship you intend to pilot, and NAME is your alias
-
-OpenTyrian uses UDP port 1333 for multiplayer, but in most cases players will
-not need to open any ports because OpenTyrian makes use of UDP hole punching.
+Place the extracted tyrian21.zip into the data/ folder.
 
 == Links =======================================================================
 
